Tree loading from ini

--- a/.geany/project_sample.ini
+++ b/.geany/project_sample.ini
@@ -1,10 +1,15 @@
 # This is an example project.ini file that should be parseable/writeable
 
+## Tree Sections
+# All tree-section entries are sorted numerically by their first part
+# an optional -XYZ part is also available for non-file cases
+
 # Root node leads to all other tree-ish stuff
 [.]
 0  = ./notes.txt
 4-group = Python
 7-group = Config
+20  = ./project-tree/config/__init__.py
 
 [./Python]
 44=./project-tree/project_tree.py
@@ -12,7 +17,11 @@
 [./Config]
 0 = ./project-tree/config.glade
 1 = ./project-tree/config/interface.glade
-6 = ./project-tree/config/loder.py
+6 = ./project-tree/config/loader.py
+
+
+## Non-Tree Sections
+# No lead to by [.], so exists independently
 
 [Some-other-category]
-# No lead to by [.], so exists independently
+foo = bar
