Saving of project-tree file works

--- a/.geany/project-tree-layout_devel.ini
+++ b/.geany/project-tree-layout_devel.ini
@@ -21,7 +21,7 @@
 
 
 ## Non-Tree Sections
-# No lead to by [.], so exists independently
+# Not lead to by [.], so exist independently (and ignored for now)
 
 [Some-other-category]
 foo = bar
