Cleaning up for github

--- a/.geany/session_default.ini
+++ b/.geany/session_default.ini
@@ -7,6 +7,6 @@
 6 = ./project_tree.py:1
 
 [open-tree]
-# Just truthy-values for Group paths that should be open
+# Just truthy-values for Group paths that should be open (ignored for now)
 ./Python = 1
 
