README md fixes

--- a/.geany/project-tree-layout_devel.ini
+++ b/.geany/project-tree-layout_devel.ini
@@ -6,18 +6,24 @@
 
 # Root node leads to all other tree-ish stuff
 [.]
-0  = ./notes.txt
-4-group = Python
-7-group = Config
-20  = ./project-tree/config/__init__.py
+10 = notes.txt
+20 = .gitignore
+30-group = GitHub-Extras
+40-group = ActualPlugin
+50-group = Sample INI files
 
-[./Python]
-44=./project-tree/project_tree.py
+[./GitHub-Extras]
+10 = README.markdown
+20 = COPYING
 
-[./Config]
-0 = ./project-tree/config.glade
-1 = ./project-tree/config/interface.glade
-6 = ./project-tree/config/loader.py
+[./ActualPlugin]
+10 = project-tree/project_tree.py
+
+[./Sample INI files]
+10 = .geany/session_default.ini
+20 = .geany/project-tree-layout.ini
+30 = .geany/project-tree-layout_devel.ini
+
 
 
 ## Non-Tree Sections
